phdr,pgen,igenの解釈に間違いがあったのを修正した。 sfGeneratorの定義を作成 phdr->pbag->pgenの順番に参照して内容をログに出力してみた

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<form>
 		<input type="file" id="filedialog" name="file" onchange="onSelectedFile()" accept="audio/mid"/>
 	</form>
+	<script src="js/soundfont_def.js"></script>
+	<script src="js/soundfont_debug.js"></script>
 	<script src="js/soundfont.js"></script>
 	<script type="text/javascript">
 	var filereader=new FileReader();
